--- a/ReutilizaMais/package.json
+++ b/ReutilizaMais/package.json
@@ -25,21 +25,22 @@
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.5.0",
+    "metro": "0.82.0",
+    "metro-config": "0.82.0",
+    "metro-resolver": "0.82.0",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-date-picker": "^5.0.11",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-toast-message": "^2.3.3",
-    "metro": "0.82.0",
-    "metro-resolver": "0.82.0",
-    "metro-config": "0.82.0"
+    "react-native-toast-message": "^2.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "^18.3.23",
+    "@types/react": "^19.1.11",
     "@types/react-native": "^0.72.8",
     "expo-module-scripts": "^4.0.5",
     "typescript": "^5.9.2"
